Fixed overflow playlist container and added position relative (z-index: 99) in play bar

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ ul li a{
     width: 100%;
     height: 50px;
     background-color: aqua;
-
+    position: relative;
+    z-index: 99;
 }
 
 .content-container{
@@ -183,6 +184,7 @@ ul li a{
         display: flex;
         flex-direction: column;
         flex-grow: 1;
+        overflow: hidden;
     }
 
 
@@ -220,6 +222,7 @@ ul li a{
         display: flex;
         flex-direction: column;
         padding-top: 20px;
+        overflow: hidden;
     }
 
     .playlist-container ul li{
